@@ -2,25 +2,19 @@
 Hash: SHA256
 
 DIST dex-0.6.tar.gz 7389 SHA256 8e31bdde6b2450244c9b0a8e337997cb08b3e65626d2bf7a4dadddb19ceef0f1 SHA512 d479c51a758f9bae513c7a8f0ca0e19004f954f6ea7284b077c3602a660bd2d0ddcb3866d84b04b6bf46e64a5c7d55e1d220044034d9bb88d12ed1599d99fd6a WHIRLPOOL 409e9092781a6e31e3d41710099622fd8c41cba138b3235f796983a2e3fa45391fd7b0b1ae3cd638ddeb35990b36e88e3d729daa113dd78a68b789ba7712c947
+DIST dex-0.7.tar.gz 7679 SHA256 2b0c98832c4b894486807a9ac0417ca127425013e0f07da352621065cb36adc6 SHA512 ee1f8c6ef0b374aadf6ad0ee6482bb23f740f67888994839c381b71b3655d0cbd7d3d5c99abe5f3bce856cb767a1b4bffdbcdf6c70969226b44a59ee76943bce WHIRLPOOL 18606fe1f7f82010101c4998126505530bf7eb0e4fccfc5f9ce7d4c3d48375424d824af484d8927f2f245ee455994c91fc0772a7b47dc2e165cc38eed1917031
 EBUILD dex-0.6.ebuild 714 SHA256 9830c5128c6d8a3a0c44e81961be2f16d5b62a3903ac9eb22406345b62bcbc46 SHA512 bc385beb2faf1d9b5cb957a39ef51de3bceea3cd6c86fb8e00377471070fbc35e8462f343289916100cd5ec0fac41c3c8265f83cf630d614eb6ab5adb0e52390 WHIRLPOOL 374173b253d71e8fa4014ccdc3b660c4e5dc7b596c345b3dcf31096d7a69cb4ac22c5df9afe16b99c2cbc6f82025c27cb84c33c9d1b328eaf9ce1c15bc15d52a
-MISC ChangeLog 1007 SHA256 601658be5b03d9e7917e91524379688c0054d06f63a63fe14597ad08ae47f4d4 SHA512 976b54e5866ae9d1cebe2d55a9a32eb7ac722f7d7f64cf0cd752be16c42ea7fd886f08c49d80af19d3161e457b1d6648867dab8cc7325abb8185c153b2b638ab WHIRLPOOL edef0bcf75e3a87ce02aa5f26b164a85af669bc27702fc8be2dce4b9e0dee1cd8e64adf02d46ff4005f1296072fc98f548b283b02e06f110327f3a01a807965a
+EBUILD dex-0.7.ebuild 718 SHA256 58e1bb49d71f846c4d3a3a6bdd00918313fbbc29ef3d0437295078600a39c3a4 SHA512 3ee5d6d7ddb65545947a3806a158b7574ecc44fcff01e9001bf894af852a7212f37519fdac8331975dc00ba379a55e73867f9ee9385104508629684a29da9b7e WHIRLPOOL 4c4565f28eb9110e297995e36f493659eaa536d5c379c6514a5dcd2d314f1de4baa57251cdd1cd789a962458ce0a12b7e371aa628ab8220062e73c9840752957
+MISC ChangeLog 1133 SHA256 4e5cfe49f1ad37c4346213a348928bd73ef83de1dcd43b7f01bb4fc1c051a27a SHA512 7581052609ce3ac1a9e0d7acd12fd4ce74db7776b4375faa1cf876f964351e7abdf7b38b328e442d865191fbb0ca64ba7a8b806f9541ef48b090afbd435d65e6 WHIRLPOOL fd453a61c9bbf25369e3fb4d4d388df40ec497eff34588c6a450f56fbc2f78c81a29bce36ffce45b2f4057b7ebb9cb1bef9a0f9aebe28809f3b2bf794b868d1e
 MISC metadata.xml 233 SHA256 a93cf5c4e554b97b2a48b92f801e3a3d87833cac311db0160a387a757ab7054c SHA512 704c94018edcbc53edcf0a41c2603dd59ea217aa5871f35d4d17f7df26156b8fb0a735d2efb11b74256565db01e6790a833242de39c29a9e46ed8ed96d505334 WHIRLPOOL 57f455cf256b91fb72e642f5a861e7367961775f2ab992b8afc798ff376c9a2bc8860d09f2bc43c870531248484128c966f25a081b7789a31ba9fb4f52b5519c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVJWUDXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOuxIP/i9yCQNPdKGpUOu93CLIDUYu
-s4GCf4JevJQ4PPzPCOX6KeV1knm5m+KYqty274xGqFwczr50r9xRCUna7hOdCW/H
-XCmPhmbkDepLM0P4AC2moVmhJDCXXY7Jh/xXR/WSUFFhQPbatVaQ1T44k7OI97fP
-Xm3sHl4ScnK99C78j+2gFRuATBrai7kwkX+FVRLGnmPoQowaVcVOP+b5S6+KLEc/
-9TGEhbJhGkOvDuTFeGq65zNlNqdhekA2b11yKI8x9BTOfwKsQFmQMEob8/kIVXfH
-TJzdFrhE7bSsg85z1pyYt051R9zQZJrinoEDIHowfe9rMjKV8uZ+BzTS/VUZLDjf
-fXq6klEl+/29KG3scbC1pSuMRfgHSBMOmQxQfr5Hkwnj23bmtwoUrI79Ugg82aOm
-iDJZv+yLQLDmfswPeRBbjNYCc2AZAs+8RcqQIgLw5P+LyOTIihm1ohc2kCyCBp5c
-4NMQeLFPJByBYTENOMlRBaarqQH6VFtQcE0hWy5Zu8bvsLzuKPN6+TrRgJUsUtD7
-6CddlYTMuvqPgBr9x5ivRtW5YJUV8MQIjugRpM0Qv5lIjgNADOxp8/VCe/tEbkDJ
-3Q3UAbv20GPRECA7mlen1etuD1uRQjwQDtXOTUGinHb9V2o3S1b+dqsqLm6CPtHJ
-yUBj7C1kbFE1JHMzyqLe
-=1Vph
+iQEcBAEBCAAGBQJVXsQeAAoJECo/aRed9267P8oH/2fIjFO9889P7zZmxOHhsR2m
+BkD1YRwLeNKwRUGh8K/cDNmFn5xhvMpVkVsD8YXrcl992jE3zqtP3CAn7nYPQL2G
+IiRX7hTxw6TbQh41NTugWXqYzxwmr0YoYy4uy6tHeAKE9Eo1os8ITUtwOEkaK+2R
+2PRSJqznpE19Oh+Q8z03piNScjWyLrAHG9bCxgdUadaLHg/ePA8HDgAKuMCKooTw
+jlWB6tpTX9eonpeTF7XR2L3nBqpIJ6oCPzN7aq5e5bbSgUbLKTL7VvBk7BFvoLKF
+pP6nJ3+BxtPYETZEwJT7rs5CIHUvnHoqpeOLDqeXXIC1CS7Ht26lw+OO7iqCVtU=
+=ztam
 -----END PGP SIGNATURE-----
