@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/dex
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/dex/ChangeLog,v 1.6 2015/04/08 17:27:17 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/dex/ChangeLog,v 1.7 2015/05/22 05:52:23 pinkbyte Exp $
+
+*dex-0.7 (22 May 2015)
+
+  22 May 2015; Sergey Popov <pinkbyte@gentoo.org> +dex-0.7.ebuild:
+  Version bump, wrt bug #503958
 
   08 Apr 2015; Michał Górny <mgorny@gentoo.org> dex-0.6.ebuild:
   Drop old Python implementations
